[tool.poetry]
name = "Forest_ml"
version = "0.1.0"
description = ""
authors = ["Kirill Laikeknen"]

[tool.poetry.scripts]
train = "Forest_ml.train:train"
eda = "Forest_ml.reports:create_profile_report"

[tool.poetry.dependencies]
python = "^3.7.5"
numpy = "1.21.1"
pandas = "1.3.5"
sklearn = "^0.0"
pandas-profiling = "^3.2.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
